@@ -115,7 +115,7 @@ setMethod('area', signature(x='RasterStackBrick'),
 			return( area(raster(x), filename=filename, na.rm=FALSE, weights=weights, ...) )
 		}	
 		
-		out = brick(x, values=FALSE)
+		out <- brick(x, values=FALSE)
 
 		if (! .couldBeLonLat(out)) {
 			stop('This function is only useful for Raster* objects with a longitude/latitude coordinates')
@@ -152,6 +152,7 @@ setMethod('area', signature(x='RasterStackBrick'),
 			tr <- blockSize(out, minblocks=nodes)
 			pb <- pbCreate(tr$n, ...)
 
+#			clFun <- function(i, tr, dx, dy, out, nl) {
 			clFun <- function(i) {
 				r <- tr$row[i]:(tr$row[i]+tr$nrows[i]-1)
 				vv <- dx[r] * dy / 1000000
@@ -162,14 +163,20 @@ setMethod('area', signature(x='RasterStackBrick'),
 				vv[is.na(a)] <- NA
 				return(vv)
 			}
-				
+
+			clusterExport(cl, c('tr', 'dx', 'dy', 'out', 'nl'), envir=environment())
+			
 		    for (i in 1:nodes) {
-				sendCall(cl[[i]], clFun, i, tag=i)
+#				parallel:::sendCall(cl[[i]], clFun, list(i, tr, dx, dy, out, nl), tag=i)
+				parallel:::sendCall(cl[[i]], clFun, list(i), tag=i)
 			}
 
 			for (i in 1:tr$n) {
-				d <- recvOneData(cl)
-				if (! d$value$success ) { stop('cluster error') }
+				d <- parallel:::recvOneData(cl)
+				if (! d$value$success ) { 
+					print(d)
+					stop('cluster error') 
+				}
 
 				if (filename == "") {
 					r <- tr$row[d$value$tag]:(tr$row[d$value$tag]+tr$nrows[d$value$tag]-1)
@@ -181,7 +188,8 @@ setMethod('area', signature(x='RasterStackBrick'),
 				}
 
 				if ((nodes + i) <= tr$n) {
-					sendCall(cl[[d$node]], clFun, nodes+i, tag=nodes+i)
+#					parallel:::sendCall(cl[[d$node]], clFun, list(nodes+i, tr, dx, dy, out, nl), tag=nodes+i)
+					parallel:::sendCall(cl[[d$node]], clFun, list(nodes+i), tag=nodes+i)
 				}
 				pbStep(pb, i) 	
 			}		
