@@ -68,14 +68,16 @@ function(x, y, method="bilinear", filename="", ...)  {
 			xy <- xyFromCell(y, cellFromRowCol(y, tr$row[i], 1) : cellFromRowCol(y, tr$row[i]+tr$nrows[i]-1, ncol(y)) ) 
 			.xyValues(x, xy, method=method)
 		}
+
+		clusterExport(cl, varlist=c('x', 'y', 'tr', 'method'), envir=environment())
 		
         for (ni in 1:nodes) {
-			sendCall(cl[[ni]], clFun, ni, tag=ni)
+			parallel:::sendCall(cl[[ni]], clFun, list(ni), tag=ni)
 		}
 
 		if (inMemory) {
 			for (i in 1:tr$n) {
-				d <- recvOneData(cl)
+				d <- parallel:::recvOneData(cl)
 				if (! d$value$success) {
 					stop('cluster error')
 				}
@@ -85,7 +87,7 @@ function(x, y, method="bilinear", filename="", ...)  {
 
 				ni <- ni + 1
 				if (ni <= tr$n) {
-					sendCall(cl[[d$node]], clFun, ni, tag=ni)
+					parallel:::sendCall(cl[[d$node]], clFun, list(ni), tag=ni)
 				}
 				pbStep(pb)
 			}
@@ -97,11 +99,11 @@ function(x, y, method="bilinear", filename="", ...)  {
 		} else {
 		
 			for (i in 1:tr$n) {
-				d <- recvOneData(cl)
+				d <- parallel:::recvOneData(cl)
 				y <- writeValues(y, d$value$value, tr$row[d$value$tag])
 				ni <- ni + 1
 				if (ni <= tr$n) {
-					sendCall(cl[[d$node]], clFun, ni, tag=ni)
+					parallel:::sendCall(cl[[d$node]], clFun, list(ni), tag=ni)
 				}
 				pbStep(pb)
 			}
